# flatr

./: Cargo.toml  README.md  flake.nix
docs/: demo.tape
src/: cli.rs  lib.rs  main.rs
