[package]
name = "flatr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0.107", features = ["preserve_order"] }
clap = { version = "4.4.6", features = ["derive"] }
colored = "2.0.4"

[dev-dependencies]
strip-ansi-escapes = "0.2.0"
