[package]
name = "flatr"
version = "0.1.0"
edition = "2021"
description = "Prints JSON files in a flat format."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0.107", features = ["preserve_order"] }
clap = { version = "4.4.6", features = ["derive"] }
colored = "2.0.4"
strip-ansi-escapes = "0.2.0"
